styles.css
:root {
    --bg-color: #C0A886;
    --bg-contents:#B8A282;
    --bg-table-color: #D8CCB5;
    --bg-light-color: #E2DBC8;
    --bg-border-color: #94856D;
    --hover-color: #6f604d;
    --text-color: #4d4d4d;
    --disabled-color: #cccccc;
}

/* #################### Body #################### */

body {
    background-color: #C0A886;
    font-family: 'Georgia', sans-serif;
    color: #333;
    display: flex;
    flex-direction: column; /* Ensure that the content is stacked vertically */
}

/* #################### Overlay #################### */

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
    display: flex;
    flex-direction: column; /* Ensure that the overlay content is stacked vertically */
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.overlay-content {
    background-color: #E2DBC8;
    padding: 20px;
    border: 1px solid #94856D;
    border-radius: 10px;
    max-width: 400px;
    width: 100%;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    text-align: center;
    font-family: 'PT Serif', serif;
    margin-bottom: 20px;
}
.overlayButton {
    background-color: #94856D;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1em;
    margin-bottom: 10px;
}
.overlayButton:hover {
    background-color: #6f604d;
}

.hidden {
    display: none;
}

/* Win message text */
#congratsMessageText,
#gameMessageText,
#timeMessageText {
    font-size: 1.2em;
    color: #4d4d4d;
    margin-bottom: 20px;
}

/* #################### Suggestions #################### */
.suggestions {
    position: absolute;
    background-color: var(--bg-table-color);
    border: 1px solid var(--bg-border-color);
    z-index: 100;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}
.suggestion {
    padding: 5px;
    cursor: pointer;
}
.suggestion:hover {
    background-color: var(--bg-contents);
}


/* #################### Notification #################### */

#notification {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    top: 20px;
    left: 50%;
    transform: translateX(-50%); /* Move it back to center */
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    z-index: 2000;
    transition: opacity 0.5s ease;
    opacity: 0;
    pointer-events: none; /* Allow clicks to pass through */
}

#notification.visible {
    opacity: 1;
}


/* #################### Page Content #################### */

/* Apply a similar background to the content area */
#pageContent {
    left: 8px;
    right: 8px;
    bottom: 8px;
    flex-grow: 1; /* Allow pageContent to take the remaining space */
    overflow-y: auto; /* Enables vertical scrolling */
    background-color: #E2DBC8;
    padding: 20px;
    box-sizing: border-box; /* Ensures padding doesn’t mess with the width */
    margin: 20px auto;
    max-width: auto;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    line-height: 1.5;

    width: 100%;
    height: 100%;
}

/* Remove the underline from hyperlinks */
#pageContent a {
    text-decoration: none;
}
/* Add the underline back when hovering */
#pageContent a:hover {
    text-decoration: underline;
}

#pageContent img {
    margin: 0px auto;
    max-width: 100%;
    height: auto;
    float: left;
    margin-right: 10px;
}

#pageContent table {
    border-collapse: collapse;
    margin-left: 0;
    margin-right: auto;
    margin-top: 8px;
    margin-bottom: 8px;
    width: auto;
    max-width: 100%;
    table-layout: auto;
    width: fit-content;

}

#pageContent td, #pageContent th {
    padding: 5px 5px;
}
#pageContent tbody td {
    text-align: left;
}


#pageContent .wikitable {
    border: 1px solid #94856D;
    border-collapse: collapse;
    max-width: 100%;
}
#pageContent .wikitable th, 
#pageContent .wikitable td {
    border: 1px solid #94856D;
}

/* Center certain elements */
#pageContent .mw-file-element, 
#pageContent .data-sort-value {
    max-width: 100%;
    height: auto;
    margin-right: 10px;
    margin-left: 0px;
    display: inline-block;
}
#pageContent .infobox {
    z-index: 500; /* Above other content */
    max-width: 50%;
}
#pageContent .infobox .mw-file-element{
    margin: 0 auto;
    vertical-align: middle;
}
#pageContent .infobox th:not(.infobox-header, .infobox-subheader) {
    margin: 0 auto;
    display: block;
    max-width: 100%;
    height: auto;
}
#pageContent .infobox-image img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);  /* Moves the element back by half its own width and height */
    
}


/* #################### Table of Contents #################### */

#pageContent .toc {
    list-style-type: none; /* Remove bullet points */
    padding-left: 0;
    margin-left: 0;
    margin-right: auto;
    margin-top: 8px;
    margin-bottom: 8px;

    border-collapse: collapse; /* Ensures the borders between cells are shared */
    width: auto;
    max-width: 100%;
    table-layout: auto;
    width: fit-content;
}

#pageContent .toc li {
    margin-left: 10px;
}
/* Remove bullet points using ::marker */
#pageContent .toc li::marker {
    content: ''; /* Hides the bullet points */
}

/* Further indent child elements for subsections */
#pageContent .toc ul ul {
    margin-left: 20px; /* Increase indentation for nested TOC entries */
}

/* Style the TOC numbering */
#pageContent .toc .tocnumber {
    font-weight: bold;
    margin-right: 5px;
}
#pageContent .toc .toctitle {
    max-width: 100%;
    height: auto;
    margin: 0 auto;
}

/* For extra page images */
#pageContent .rsw-synced-switch-item {
    display: none;
}#pageContent .rsw-synced-switch-item .showing {
    display: inline-block;
}

/* #################### Header Container #################### */

/* Parent container for the image and content */
#headerContainer {
    display: flex;
    flex-shrink: 0; /* Prevent the header from shrinking */
    align-items: center; /* Vertically aligns the image with the text */
    margin-bottom: 20px;
}
@media screen and (max-width: 768px) {
    #headerContainer {
        flex-direction: column; /* Stack image on top of content */
        align-items: center; /* Center align the content */
    }
}

/* #################### HeaderContainer > Header Image & Content #################### */

#headerImage {
    width: 150px;
    height: auto;
    margin-right: 20px;
    margin-left: 20px;
    cursor: pointer;
}
@media screen and (max-width: 768px) {
    #headerImage {
        width: 300px;
     }
}

#headerContent {
    display: flex;
    flex-direction: column;

    margin: 10px 0;
    background-color: #E2DBC8;
    padding: 5px;
    width: 100%;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
    border-radius: 8px;
    line-height: 1.5;
    z-index: 1000; /* Above other content */
}

/* #################### Header Content > Input & Buttons #################### */

.inputMargin {
    margin: 5px 10px;
    display: flex;
    flex-direction: row; /* Align in a row */
    align-items: center;
    gap: 2px;
    flex-wrap: wrap; /* Makes sure the items wrap to the next line on smaller screens */
}

.inputField 
{    
    background-color: #E2DBC8;
    color: #6f604d;
    padding: 5px 10px;
    cursor: pointer;
    font-size: 0.8em;
    margin-right: 0px;
    border: 2px solid #94856D;
    border-radius: 5px;
    box-sizing: border-box; /* Ensure padding and border are included in the width */
    cursor: text; /* Ensure the cursor is set to text input (caret) */
    outline: none; /* Remove the default highlight when the input is focused */
}
.inputField:focus {
    outline: none; /* Prevent any highlighting when the input field is clicked */
    background-color: #E2DBC8;
}
.inputField:disabled {
    background-color: #cccccc;
    color: #4d4d4d;
    cursor: default;
    opacity: 0.8; /* Make the button slightly transparent */
}

.inputButton {
    background-color: #94856D;
    color: white;
    padding: 5px 10px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 0.8em;
    margin-right: 8px;
}
.inputButton:hover {
    background-color: #6f604d;
}
.inputButton:disabled {
    background-color: #cccccc;
    color: #4d4d4d;
    cursor: default;
    opacity: 0.8;
}
.inputButton:disabled:hover {
    background-color: #E2DBC8;
}

.inputRight {
    margin-left: auto; /* Pushes the element to the right */
}

#copyCodeButton,
#donateButton,
#dailyButton
{
    margin-right: 0px;
}

/* #################### Back Button #################### */

#backButtonOverlay {
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 10;
}

#backButton {
    background-color: #94856D;
    padding: 10px 20px;
    border: 0px solid #94856D;
    border-radius: 10px;
    font-family: 'PT Serif', serif;
    color: white;
    cursor: pointer;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    text-align: center;
    transition: background-color 0.3s ease;
}

#backButton:hover {
    background-color: #6f604d;
}


/* #################### Counter #################### */

#clickCounter,
#timerCounter {
    display: inline-block;
    margin-left: 5px;
    margin-right: 15px;
    font-weight: bold;
    align-items: center;
    justify-content: center;
    text-align: center;
}
#clickCounter {
    width: 30px;
}
#timerCounter {
    width: 50px;
}


/* #################### Headers (h1 h2) #################### */

h1, h2, h3, h4, h5, h6 {
    font-family: 'PT Serif', serif;
    position: relative;
    margin-top: 0px;
}

h1::after, h2::after {
    content: '';
    display: block;
    height: 0.5px;
    background-color: #94856D;
    margin-top: 0px;
    margin-bottom: 16px;
    width: 100%;
    position: relative;
    left: 0;
}
/* Prevent the ::after pseudo-element for h1 and h2 inside any .toc ancestor */
:not(.toc):has(h1)::after,
:not(.toc):has(h2)::after {
    content: '';
}

/* #################### Captions #################### */

/* Remove any captions */
figcaption,
/*.messagebox,*/
.rt-commentedText,
.navbox {
    display: none;
}

